--- a/package.json
+++ b/package.json
@@ -1,20 +1,28 @@
 {
-  "name": "documentsConvertor",
+  "name": "tgbot-ts",
+  "private": true,
   "version": "1.0.0",
   "description": "",
   "type": "module",
-  "main": "index.js",
   "scripts": {
-    "start": "tsc && node ./dist/bot.js"
+    "dev": "nodemon -w './src/**/*' -x 'ts-node-esm ./src/main.ts' ",
+    "start": "ts-node-esm ./src/main.ts"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "typescript",
+    "telegram",
+    "bot"
+  ],
+  "author": "Abdelkarim Djelalda",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^18.11.9",
+    "dotenv": "^16.0.3",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
   "dependencies": {
-    "grammy": "^1.12.0"
+    "grammy": "^1.12.0",
+    "nodemon": "^2.0.20"
   }
 }
